# ebit_fidelity

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  cleanup.sh  detectors.html  fidelity_calculator.html  genindex.html  index.html  modules.html  network.html  objects.inv  py-modindex.html  pyproject.toml  qpu_entity.html  requirements.txt  search.html  searchindex.js
_modules/: detectors.html  fidelity_calculator.html  index.html  network.html  qpu_entity.html
_sources/: fidelity_calculator.rst.txt
notebooks/: dual_rail_entanglement_heralding.ipynb  (+1 more)
snippets/netsquid-physlayer-v4.1.0/: .bumpversion.cfg  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg
snippets/netsquid-physlayer-v4.1.0/docs/: Makefile  api.rst  conf.py  index.rst  usage.rst
snippets/netsquid-physlayer-v4.1.0/docs/modules/: absorption_connection.rst  classical_connection.rst  classical_errors.rst  detectors.rst  heralded_connection.rst  pair_preparation.rst  photon_noise.rst  quantum_program_library.rst
snippets/netsquid-physlayer-v4.1.0/netsquid_physlayer/: heralded_connection.py  quantum_program_library.py
snippets/netsquid-physlayer-v4.1.0/tests/: test_absorption_connection.py  test_classical_connection.py  test_classical_errors.py  test_detectors.py  test_heralded_connection.py  test_pair_preparation.py
snippets/netsquid-physlayer-v4.1.0/tests/resources/: clifford_only.json  cx_direction.json  general.json  no_gates.json  quantum_program.json  test_application_of_noise_config.json  time_program.json  two_qubit.json  unitary_only.json
(+34 files in other folders)
