# Edit the below configuration parameters to match your snippet

[metadata]
name = netsquid-physlayer
version = 4.1.0
author = QuTech, Axel Dahlberg
maintainer = David Maier
maintainer-email = d.j.maier@tudelft.nl
description = Snippet for various physical components used in a quantum network
license = Apache-2.0
home-page = https://gitlab.com/softwarequtech/netsquid-snippets/netsquid-physlayer

[netsquid]
pypi-server = pypi.netsquid.org
